static/css/temporary.css
#temporary-container {
    display: flex;
    margin-top: 5vw;
    height: 75%;
    flex-direction: column;
    color: var(--text-terciary);
    font-size: 1.25vw;
    /* overflow: hidden; */
}

.temporary-stages {
    display: flex;
}

.temporary-stages>div {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100%;
    text-align: center;
}

.temporary-stages>hr {
    height: 50%;
    align-self: center;
}

.circle-number {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    width: 4vw;
    height: 4vw;
    filter: drop-shadow(0 3px 10px rgba(0, 0, 0, 0.15));
    background-color: var(--toolbar-color);
}

.temporary-stages>div>img {
    width: 3vw;
    margin-top: auto;
}

.temporary-stages>div>button {
    width: 10vw;
    margin-top: auto;
    margin-bottom: 1vw;
}

.stages-container {
    margin-top: -4vw;
    height: 100%;
}

.stages-container input, select {
    font-size: 1.25vw;
    margin-top: 0;
    padding: 1vw;
    border-radius: 2vw;
    outline: none;
    border: none;
    height: 2.5vw;
    background-color: var(--input-background);
}

.stage-1-container {
    display: flex;
    flex-direction: column;
}

.stage-1-container > h1 {
    margin: 10px 2vw;
}

.stage-1-container > form {
    display: flex;
    overflow-y: scroll;
}

.stage-1-container > form > div {
    flex: 1;
    display: flex;
    flex-direction: column;
}

/* .stage-1-container > form > div > div */
.temp-skills-select {
    display: flex;
    flex-direction: column;
    border: 1px solid var(--text-secondary);
    border-radius: 0.7vw;
    min-height: 13vw;
    overflow-y: auto;
}

.temp-skills-select div {
    display: flex;
    align-items: center;
}

/* .stage-1-container > form > div > div > div {
    margin: 0.1vw 2vw;
    display: flex;
    padding: 0 3vw;
    flex-direction: row;
} */

/* .stage-1-container > form > div > div > div > * {
    flex: 1;
} */

/* .stage-1-container > form > div > div > div > input */
.temp-skills-select input {
    margin-top: 0.5vw;
    height: 1vw;
}

#submit-stage-1-button {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 1vw 0;
    margin-top: 1vw;
    width: 10vw;
    align-self: center;
}

.crm-uf-input {
    display: flex;
    margin: 0;
    justify-content: space-between;
}

.input-column {
    display: flex;
    flex-direction: column;
    margin: 0;
    width: 49%;
}

.temp-logout-button {
    background-color: #656565;
    position: absolute;
    bottom: -3vw;
    width: 10vw;
}

.temp-logout-button:hover {
    background-color: #8D8D8D;
}

@media only screen and (max-width: 600px) {

    body {
        overflow-y: scroll;
    }
    
    #temporary-container {
        font-size: 4vw;
        height: 95%;
    }
    
    #menu-button {
        display: none;
    }
    
    .temporary-stages {
        flex-direction: column;
        gap: 8vw;
        padding-top: 2vw;
    }

    .stage-1-container > form {
        flex-direction: column;
    }

    .circle-number {
        margin-bottom: 3vw;
    }

    .temporary-stages>hr {
        width: 50%;
    }

    .temporary-stages>div>img {
        width: 6vw;
        margin-top: 3vw;
    }

    button {
        border-radius: 5vw;
        height: auto;
        padding: 1vw 0;
        font-size: 4vw;
    }

    .temporary-stages>div>button {
        width: 50vw;
        margin-top: 3vw;
        margin-bottom: 0;
    }

    .stage-1-container label {
        font-size: 5vw;
    }

    .stages-container input {
        font-size: 4vw;
        margin-top: 0.5vw;
        margin-bottom: 3vw;
        padding-left: 2vw;
        border-radius: 5vw;
        height: 8vw;
    }

    .crm-uf-input {
        flex-direction: column;
    }

    .input-column {
        width: 100%;
    }

    .input-column input,select {
        font-size: 4vw;
        margin-top: 0.5vw;
        margin-bottom: 3vw;
        padding-left: 2vw;
        border-radius: 5vw;
        height: 8vw;
    }

    .temp-skills-p {
        font-size: 5vw;
        color: var(--text-terciary);
        opacity: 1;
    }

    .temp-skills-select {
        margin: 1vw 0 3vw;
        padding: 2vw;
        border-radius: 3vw;
    }

    .temp-skills-select input {
        margin: 0 0 0 3vw;
    }

    #submit-stage-1-button {
        margin-top: 7vw;
        height: 8vw;
        width: 75vw;
    }

    .temp-logout-button {
        width: 20vw;
        bottom: 1.5vw;
        left: 1.5vw;
    }

}

